assets/*: change heading styling so can be used for h2 as well as h1, add min width to stock table and update wine image to ensure centered on mobile

--- a/wine_cellar/assets/css/detail.css
+++ b/wine_cellar/assets/css/detail.css
@@ -7,7 +7,7 @@
     box-shadow: var(--container-box-shadow);
     padding: 6px;
     box-sizing: border-box;
-
+    margin-inline: auto;
     margin-block-end: 2rem;
     
     img {
@@ -20,8 +20,8 @@
 
   @media screen and (min-width: 48em) {
     margin-inline-start: auto;
-    margin-inline-end: 1rem;
-
+    margin-inline-end: 3rem;
+    margin-block-start: 0.5rem;
   }
 }
 
@@ -55,8 +55,10 @@
   text-align: left;
   margin: auto;
   border-collapse: collapse;
+  min-width: 40%;
   th:first-child {
-  min-width: 8px;
+    min-width: 8px;
+
   }
   tr:nth-child(even){background-color: #f2f2f2;}
 
